--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "@razor/wallet-sdk",
   "version": "1.0.0",
   "description": "",
-  "main": "dist/index.cjs",
+  "main": "dist/index.umd.cjs",
   "module": "dist/index.js",
   "types": "dist/index.d.ts",
   "type": "module",
@@ -12,17 +12,15 @@
   "exports": {
     ".": {
       "import": "./dist/index.js",
-      "require": "./dist/index.cjs"
+      "require": "./dist/index.umd.cjs"
     }
   },
   "scripts": {
-    "dev": "tsup --watch",
     "lint": "eslint src/ --ext .js,.jsx,.ts,.tsx",
-    "test": "jest",
+    "test": "jest --reporters jest-simple-dot-reporter --collectCoverage=false",
     "clean": "rm -rf dist",
-    "ts-node": "ts-node",
-    "docs": "typedoc --entryPoints src/index.ts",
-    "build": "pnpm clean && tsup"
+    "build": "pnpm clean && tsc --emitDeclarationOnly && vite build",
+    "format": "prettier --write \"**/*.{ts,tsx,md}\""
   },
   "keywords": [],
   "author": "",
@@ -30,8 +28,16 @@
   "devDependencies": {
     "@typescript-eslint/parser": "^6.18.1",
     "eslint": "^8.56.0",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
+    "jest-simple-dot-reporter": "^1.0.5",
     "prettier": "^3.1.1",
-    "tsup": "^8.0.1",
-    "typescript": "^5.3.3"
+    "rollup-plugin-visualizer": "^5.12.0",
+    "typescript": "^5.3.3",
+    "vite": "^5.0.11",
+    "vite-plugin-dts": "^3.7.0"
+  },
+  "dependencies": {
+    "@mysten/sui.js": "^0.49.1"
   }
 }
