--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
   "author": "",
   "license": "MIT",
   "devDependencies": {
+    "@types/jest": "^29.5.11",
+    "@types/node": "^20.10.8",
     "@typescript-eslint/parser": "^6.18.1",
     "eslint": "^8.56.0",
     "jest": "^29.7.0",
@@ -33,11 +35,14 @@
     "jest-simple-dot-reporter": "^1.0.5",
     "prettier": "^3.1.1",
     "rollup-plugin-visualizer": "^5.12.0",
+    "ts-jest": "^29.1.1",
+    "ts-node": "^10.9.2",
     "typescript": "^5.3.3",
     "vite": "^5.0.11",
     "vite-plugin-dts": "^3.7.0"
   },
   "dependencies": {
-    "@mysten/sui.js": "^0.49.1"
+    "@mysten/sui.js": "^0.49.1",
+    "@mysten/wallet-standard": "^0.10.1"
   }
 }
