updated package name

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@razor/wallet-sdk",
+  "name": "@razorlabs/wallet-sdk",
   "version": "0.1.0",
   "description": "",
   "main": "dist/index.umd.cjs",
