--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@razorlabs/wallet-sdk",
-  "version": "0.1.4",
+  "version": "0.1.5",
   "description": "",
   "main": "dist/index.umd.cjs",
   "module": "dist/index.js",
@@ -42,7 +42,7 @@
   },
   "dependencies": {
     "@mysten/sui.js": "^0.49.1",
-    "@mysten/wallet-standard": "^0.10.1",
+    "@razorlabs/wallet-standard": "^0.1.0",
     "buffer": "^6.0.3"
   }
 }
