--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@razorlabs/wallet-sdk",
-  "version": "0.1.7",
+  "version": "0.1.8",
   "description": "",
   "main": "dist/index.umd.cjs",
   "module": "dist/index.js",
@@ -42,7 +42,8 @@
   },
   "dependencies": {
     "@mysten/sui.js": "^0.49.1",
-    "@razorlabs/wallet-standard": "^0.1.0",
-    "buffer": "^6.0.3"
+    "@razorlabs/wallet-standard": "^0.1.5",
+    "buffer": "^6.0.3",
+    "movement-sdk": "^1.0.4"
   }
 }
