--- a/package.json
+++ b/package.json
@@ -26,25 +26,25 @@
   "author": "",
   "license": "MIT",
   "devDependencies": {
-    "@types/jest": "^29.5.11",
-    "@types/node": "^20.10.8",
-    "@typescript-eslint/parser": "^6.18.1",
+    "@types/jest": "^29.5.12",
+    "@types/node": "^20.12.12",
+    "@typescript-eslint/parser": "^7.9.0",
     "eslint": "^8.56.0",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "jest-simple-dot-reporter": "^1.0.5",
-    "prettier": "^3.1.1",
-    "ts-jest": "^29.1.1",
+    "prettier": "^3.2.5",
+    "ts-jest": "^29.1.2",
     "ts-node": "^10.9.2",
-    "typescript": "^5.3.3",
-    "vite": "^5.0.11",
-    "vite-plugin-dts": "^3.7.0"
+    "typescript": "^5.4.5",
+    "vite": "^5.2.11",
+    "vite-plugin-dts": "^3.9.1"
   },
   "dependencies": {
-    "@mysten/sui.js": "^0.49.1",
-    "@razorlabs/aptos-wallet-standard": "^0.1.8",
-    "@razorlabs/sui-wallet-standard": "^0.1.2",
-    "buffer": "^6.0.3",
-    "movement-sdk": "^1.0.4"
+    "@mysten/sui.js": "^0.54.1",
+    "@mysten/wallet-standard": "^0.11.6",
+    "@razorlabs/wallet-standard": "^0.2.1",
+    "aptos": "^1.21.0",
+    "buffer": "^6.0.3"
   }
 }
